--- a/output/authors.html
+++ b/output/authors.html
@@ -16,19 +16,19 @@
         <meta property="og:site_name" content="VoidStar Security Blog" />
         <meta property="og:type" content="website"/>
         <meta property="og:title" content="VoidStar Security Blog"/>
-        <meta property="og:url" content="https://wrongbaud.github.io/newblog"/>
+        <meta property="og:url" content=""/>
         <meta property="og:description" content="VoidStar Security Blog"/>
 
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="https://wrongbaud.github.io/newblog/theme/css/bootstrap.spacelab.min.css" type="text/css"/>
-    <link href="https://wrongbaud.github.io/newblog/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="/theme/css/bootstrap.spacelab.min.css" type="text/css"/>
+    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="https://wrongbaud.github.io/newblog/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://wrongbaud.github.io/newblog/theme/css/style.css" type="text/css"/>
+    <link href="/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
 
-        <link href="https://wrongbaud.github.io/newblog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
+        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
               title="VoidStar Security Blog ATOM Feed"/>
 
 
@@ -39,7 +39,7 @@
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
-            <a href="https://wrongbaud.github.io/newblog/" class="navbar-brand">
+            <a href="/" class="navbar-brand">
 VoidStar Security Blog            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -60,8 +60,8 @@ VoidStar Security Blog            </a>
     <div class="row">
         <div class="col-sm-9 col-sm-push-3">
   <h1>Authors on VoidStar Security Blog</h1>
-        <li><a href="https://wrongbaud.github.io/newblog/author/matthew-alt.html">"Matthew Alt"</a> (2)</li>
-        <li><a href="https://wrongbaud.github.io/newblog/author/voidstar-security.html">VoidStar Security</a> (5)</li>
+        <li><a href="/author/matthew-alt.html">"Matthew Alt"</a> (6)</li>
+        <li><a href="/author/voidstar-security.html">VoidStar Security</a> (2)</li>
         </div>
         <div class="col-sm-3 col-sm-pull-9" id="sidebar">
             <aside>
@@ -73,9 +73,9 @@ VoidStar Security Blog            </a>
 <li class="list-group-item">
   <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
   <ul class="list-group" id="social">
-    <li class="list-group-item"><a href="http://twitter.com/voidstarsec"><i class="fa fa-twitter-square fa-lg"></i> twitter</a></li>
-    <li class="list-group-item"><a href="http://www.linkedin.com/in/voidstarsec"><i class="fa fa-linkedin-square fa-lg"></i> linkedin</a></li>
-    <li class="list-group-item"><a href="http://github.com/voidstarsec"><i class="fa fa-github-square fa-lg"></i> github</a></li>
+    <li class="list-group-item"><a href="https://twitter.com/voidstarsec"><i class="fa fa-twitter-square fa-lg"></i> twitter</a></li>
+    <li class="list-group-item"><a href="https://www.linkedin.com/in/voidstarsec"><i class="fa fa-linkedin-square fa-lg"></i> linkedin</a></li>
+    <li class="list-group-item"><a href="https://github.com/voidstarsec"><i class="fa fa-github-square fa-lg"></i> github</a></li>
   </ul>
 </li>
 <!-- End Sidebar/Social -->
@@ -85,19 +85,16 @@ VoidStar Security Blog            </a>
   <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Categories</span></h4>
   <ul class="list-group" id="categories">
     <li class="list-group-item">
-      <a href="https://wrongbaud.github.io/newblog/category/blog.html"><i class="fa fa-folder-open fa-lg"></i>blog</a>
+      <a href="/category/ghidra.html"><i class="fa fa-folder-open fa-lg"></i>Ghidra</a>
     </li>
     <li class="list-group-item">
-      <a href="https://wrongbaud.github.io/newblog/category/ghidra.html"><i class="fa fa-folder-open fa-lg"></i>Ghidra</a>
+      <a href="/category/glitching.html"><i class="fa fa-folder-open fa-lg"></i>Glitching</a>
     </li>
     <li class="list-group-item">
-      <a href="https://wrongbaud.github.io/newblog/category/glitching.html"><i class="fa fa-folder-open fa-lg"></i>Glitching</a>
+      <a href="/category/hardware.html"><i class="fa fa-folder-open fa-lg"></i>Hardware</a>
     </li>
     <li class="list-group-item">
-      <a href="https://wrongbaud.github.io/newblog/category/pifex.html"><i class="fa fa-folder-open fa-lg"></i>Pifex</a>
-    </li>
-    <li class="list-group-item">
-      <a href="https://wrongbaud.github.io/newblog/category/training.html"><i class="fa fa-folder-open fa-lg"></i>training</a>
+      <a href="/category/training.html"><i class="fa fa-folder-open fa-lg"></i>Training</a>
     </li>
   </ul>
 </li>
@@ -145,13 +142,13 @@ VoidStar Security Blog            </a>
       </div>
    </div>
 </footer>
-<script src="https://wrongbaud.github.io/newblog/theme/js/jquery.min.js"></script>
+<script src="/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="https://wrongbaud.github.io/newblog/theme/js/bootstrap.min.js"></script>
+<script src="/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="https://wrongbaud.github.io/newblog/theme/js/respond.min.js"></script>
+<script src="/theme/js/respond.min.js"></script>
 
 
 
