--- a/output/ghidra-dev-environment.html
+++ b/output/ghidra-dev-environment.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="/extending-ghidra-part-1-setting-up-a-development-environment.html">
+<link rel="canonical" href="/ghidra-dev-environment.html">
 
         <meta name="author" content=""Matthew Alt"" />
         <meta name="keywords" content="ghidra,tutorial" />
@@ -18,7 +18,7 @@
         <meta property="og:site_name" content="VoidStar Security Blog" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Extending Ghidra Part 1: Setting up a Development Environment"/>
-        <meta property="og:url" content="/extending-ghidra-part-1-setting-up-a-development-environment.html"/>
+        <meta property="og:url" content="/ghidra-dev-environment.html"/>
         <meta property="og:description" content="With this post, I hope to explain how to set up a development environment for the latest Ghidra release on Ubuntu 20.04. After following the steps outlined below, we will have the ability to write, debug and export custom Ghidra plugins, modules, and scripts."/>
         <meta property="article:published_time" content="2021-12-24" />
             <meta property="article:section" content="Ghidra" />
@@ -71,7 +71,7 @@ VoidStar Security Blog            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="/extending-ghidra-part-1-setting-up-a-development-environment.html"
+                    <a href="/ghidra-dev-environment.html"
                        rel="bookmark"
                        title="Permalink to Extending Ghidra Part 1: Setting up a Development Environment">
                         Extending Ghidra Part 1: Setting up a Development Environment
@@ -360,9 +360,9 @@ index<span class="w"> </span>6391c29..9ccf7fa<span class="w"> </span><span class
 <li class="list-group-item">
   <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
   <ul class="list-group" id="social">
-    <li class="list-group-item"><a href="http://twitter.com/voidstarsec"><i class="fa fa-twitter-square fa-lg"></i> twitter</a></li>
-    <li class="list-group-item"><a href="http://www.linkedin.com/in/voidstarsec"><i class="fa fa-linkedin-square fa-lg"></i> linkedin</a></li>
-    <li class="list-group-item"><a href="http://github.com/voidstarsec"><i class="fa fa-github-square fa-lg"></i> github</a></li>
+    <li class="list-group-item"><a href="https://twitter.com/voidstarsec"><i class="fa fa-twitter-square fa-lg"></i> twitter</a></li>
+    <li class="list-group-item"><a href="https://www.linkedin.com/in/voidstarsec"><i class="fa fa-linkedin-square fa-lg"></i> linkedin</a></li>
+    <li class="list-group-item"><a href="https://github.com/voidstarsec"><i class="fa fa-github-square fa-lg"></i> github</a></li>
   </ul>
 </li>
 <!-- End Sidebar/Social -->
