--- a/output/intro-to-embedded-part-1.html
+++ b/output/intro-to-embedded-part-1.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="/intro-to-embedded-re-part-1-tools-and-series-overview.html">
+<link rel="canonical" href="/intro-to-embedded-part-1.html">
 
         <meta name="author" content=""Matthew Alt"" />
         <meta name="keywords" content="hardware,uart,uboot" />
@@ -18,7 +18,7 @@
         <meta property="og:site_name" content="VoidStar Security Blog" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Intro to Embedded RE Part 1: Tools and Series Overview"/>
-        <meta property="og:url" content="/intro-to-embedded-re-part-1-tools-and-series-overview.html"/>
+        <meta property="og:url" content="/intro-to-embedded-part-1.html"/>
         <meta property="og:description" content="This post reviews some of the tools needed when setting up a lab for reverse engineering embedded systems. There will be two sections, one for hardware tools and one for software tools. After reading this blog post, the reader should know what is needed to set up an introductory lab for reverse engineering embedded systems and firmware images."/>
         <meta property="article:published_time" content="2022-01-17" />
             <meta property="article:section" content="Hardware" />
@@ -72,7 +72,7 @@ VoidStar Security Blog            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="/intro-to-embedded-re-part-1-tools-and-series-overview.html"
+                    <a href="/intro-to-embedded-part-1.html"
                        rel="bookmark"
                        title="Permalink to Intro to Embedded RE Part 1: Tools and Series Overview">
                         Intro to Embedded RE Part 1: Tools and Series Overview
@@ -105,8 +105,7 @@ VoidStar Security Blog            </a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
-                <hr>
-<h1>Tools and Series Overview</h1>
+                <h1>Tools and Series Overview</h1>
 <h1>Overview</h1>
 <p>Recently <a href="https://twitter.com/wrongbaud">on Twitter</a>, I was approached with a request for a roadmap for learning how to reverse engineer embedded systems. This question is a common one and is one of the reasons that I developed <a href="https://voidstarsec.com/training.html">our training course</a>. But, since that is not accessible to everyone, I wanted to create a series of blog posts with the goal being to set people on the path to learning more about hardware hacking and reverse engineering. This series will focus on open-source tooling and (relatively) low-cost targets. </p>
 <p>Like any reverse engineering project or skill-set, it is essential to focus on the fundamentals. We can think of our fundamental building blocks as various digital signals and protocols for the targets we will review in this series. This series of posts will review the following protocols and their relevant applications/tools.</p>
@@ -386,9 +385,9 @@ VoidStar Security Blog            </a>
 <li class="list-group-item">
   <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
   <ul class="list-group" id="social">
-    <li class="list-group-item"><a href="http://twitter.com/voidstarsec"><i class="fa fa-twitter-square fa-lg"></i> twitter</a></li>
-    <li class="list-group-item"><a href="http://www.linkedin.com/in/voidstarsec"><i class="fa fa-linkedin-square fa-lg"></i> linkedin</a></li>
-    <li class="list-group-item"><a href="http://github.com/voidstarsec"><i class="fa fa-github-square fa-lg"></i> github</a></li>
+    <li class="list-group-item"><a href="https://twitter.com/voidstarsec"><i class="fa fa-twitter-square fa-lg"></i> twitter</a></li>
+    <li class="list-group-item"><a href="https://www.linkedin.com/in/voidstarsec"><i class="fa fa-linkedin-square fa-lg"></i> linkedin</a></li>
+    <li class="list-group-item"><a href="https://github.com/voidstarsec"><i class="fa fa-github-square fa-lg"></i> github</a></li>
   </ul>
 </li>
 <!-- End Sidebar/Social -->
