--- a/output/on-the-road.html
+++ b/output/on-the-road.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="/on-the-road-at-the-leahy-center-our-first-in-person-training-of-2022.html">
+<link rel="canonical" href="/on-the-road.html">
 
         <meta name="author" content="VoidStar Security" />
         <meta name="keywords" content="training,blog" />
@@ -18,7 +18,7 @@
         <meta property="og:site_name" content="VoidStar Security Blog" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="On the Road at the Leahy Center: Our first in-person training of 2022!"/>
-        <meta property="og:url" content="/on-the-road-at-the-leahy-center-our-first-in-person-training-of-2022.html"/>
+        <meta property="og:url" content="/on-the-road.html"/>
         <meta property="og:description" content="Description of the on-site course at Leahy Center"/>
         <meta property="article:published_time" content="2022-11-11" />
             <meta property="article:section" content="Training" />
@@ -71,7 +71,7 @@ VoidStar Security Blog            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="/on-the-road-at-the-leahy-center-our-first-in-person-training-of-2022.html"
+                    <a href="/on-the-road.html"
                        rel="bookmark"
                        title="Permalink to On the Road at the Leahy Center: Our first in-person training of 2022!">
                         On the Road at the Leahy Center: Our first in-person training of 2022!
@@ -230,9 +230,9 @@ spi<span class="w"> </span>spi<span class="w"> </span>usage:
 <li class="list-group-item">
   <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
   <ul class="list-group" id="social">
-    <li class="list-group-item"><a href="http://twitter.com/voidstarsec"><i class="fa fa-twitter-square fa-lg"></i> twitter</a></li>
-    <li class="list-group-item"><a href="http://www.linkedin.com/in/voidstarsec"><i class="fa fa-linkedin-square fa-lg"></i> linkedin</a></li>
-    <li class="list-group-item"><a href="http://github.com/voidstarsec"><i class="fa fa-github-square fa-lg"></i> github</a></li>
+    <li class="list-group-item"><a href="https://twitter.com/voidstarsec"><i class="fa fa-twitter-square fa-lg"></i> twitter</a></li>
+    <li class="list-group-item"><a href="https://www.linkedin.com/in/voidstarsec"><i class="fa fa-linkedin-square fa-lg"></i> linkedin</a></li>
+    <li class="list-group-item"><a href="https://github.com/voidstarsec"><i class="fa fa-github-square fa-lg"></i> github</a></li>
   </ul>
 </li>
 <!-- End Sidebar/Social -->
