--- a/output/replicant-part-1.html
+++ b/output/replicant-part-1.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="/replicant-reproducing-a-fault-injection-attack-on-the-trezor-one.html">
+<link rel="canonical" href="/replicant-part-1.html">
 
         <meta name="author" content=""Matthew Alt"" />
         <meta name="keywords" content="fault-injection,chipwhisperer" />
@@ -18,7 +18,7 @@
         <meta property="og:site_name" content="VoidStar Security Blog" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Replicant: Reproducing a Fault Injection Attack on the Trezor One"/>
-        <meta property="og:url" content="/replicant-reproducing-a-fault-injection-attack-on-the-trezor-one.html"/>
+        <meta property="og:url" content="/replicant-part-1.html"/>
         <meta property="og:description" content="This post aims to provide a road map and example of how to replicate a fault injection attack and the hurdles and shortcomings that can occur when attempting to do so. Furthermore, by outlining the process of replicating one of these attacks, we hope that readers come away from this post more confident in generating their own fault injection attacks or replicating pre-existing work."/>
         <meta property="article:published_time" content="2022-08-19" />
             <meta property="article:section" content="Glitching" />
@@ -71,7 +71,7 @@ VoidStar Security Blog            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="/replicant-reproducing-a-fault-injection-attack-on-the-trezor-one.html"
+                    <a href="/replicant-part-1.html"
                        rel="bookmark"
                        title="Permalink to Replicant: Reproducing a Fault Injection Attack on the Trezor One">
                         Replicant: Reproducing a Fault Injection Attack on the Trezor One
@@ -510,9 +510,9 @@ pi@voidstar:~/glitch/replicant<span class="w"> </span>$<span class="w"> </span>h
 <li class="list-group-item">
   <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
   <ul class="list-group" id="social">
-    <li class="list-group-item"><a href="http://twitter.com/voidstarsec"><i class="fa fa-twitter-square fa-lg"></i> twitter</a></li>
-    <li class="list-group-item"><a href="http://www.linkedin.com/in/voidstarsec"><i class="fa fa-linkedin-square fa-lg"></i> linkedin</a></li>
-    <li class="list-group-item"><a href="http://github.com/voidstarsec"><i class="fa fa-github-square fa-lg"></i> github</a></li>
+    <li class="list-group-item"><a href="https://twitter.com/voidstarsec"><i class="fa fa-twitter-square fa-lg"></i> twitter</a></li>
+    <li class="list-group-item"><a href="https://www.linkedin.com/in/voidstarsec"><i class="fa fa-linkedin-square fa-lg"></i> linkedin</a></li>
+    <li class="list-group-item"><a href="https://github.com/voidstarsec"><i class="fa fa-github-square fa-lg"></i> github</a></li>
   </ul>
 </li>
 <!-- End Sidebar/Social -->
