--- a/output/uart-uboot-and-usb.html
+++ b/output/uart-uboot-and-usb.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="/intro-to-embedded-re-uart-discovery-and-firmware-extraction-via-uboot.html">
+<link rel="canonical" href="/uart-uboot-and-usb.html">
 
         <meta name="author" content=""Matthew Alt"" />
         <meta name="keywords" content="hardware,uart,uboot" />
@@ -18,7 +18,7 @@
         <meta property="og:site_name" content="VoidStar Security Blog" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Intro to Embedded RE: UART Discovery and Firmware Extraction via UBoot"/>
-        <meta property="og:url" content="/intro-to-embedded-re-uart-discovery-and-firmware-extraction-via-uboot.html"/>
+        <meta property="og:url" content="/uart-uboot-and-usb.html"/>
         <meta property="og:description" content="This blog entry aims to familiarize readers with locating an active UART on a target system, how to approach a UBoot console, and ultimately how to leverage both of these components to extract the flash memory from our target. After reading this, readers will be familiar with the screen utility the depthcharge python3 libraries."/>
         <meta property="article:published_time" content="2022-01-27" />
             <meta property="article:section" content="Hardware" />
@@ -72,7 +72,7 @@ VoidStar Security Blog            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="/intro-to-embedded-re-uart-discovery-and-firmware-extraction-via-uboot.html"
+                    <a href="/uart-uboot-and-usb.html"
                        rel="bookmark"
                        title="Permalink to Intro to Embedded RE: UART Discovery and Firmware Extraction via UBoot">
                         Intro to Embedded RE: UART Discovery and Firmware Extraction via UBoot
@@ -105,8 +105,7 @@ VoidStar Security Blog            </a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
-                <hr>
-<h1>Intro to Embedded RE: UART Discovery and Firmware Extraction via UBoot</h1>
+                <h1>Intro to Embedded RE: UART Discovery and Firmware Extraction via UBoot</h1>
 <h1>Previous Entries</h1>
 <ul>
 <li>Part 1: <a href="https://voidstarsec.com/blog/intro-to-embedded-part-1">Tools / Series Overview</a></li>
@@ -1083,9 +1082,9 @@ Hit key to stop autoboot(&#39;CTRL+C&#39;):  0
 <li class="list-group-item">
   <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
   <ul class="list-group" id="social">
-    <li class="list-group-item"><a href="http://twitter.com/voidstarsec"><i class="fa fa-twitter-square fa-lg"></i> twitter</a></li>
-    <li class="list-group-item"><a href="http://www.linkedin.com/in/voidstarsec"><i class="fa fa-linkedin-square fa-lg"></i> linkedin</a></li>
-    <li class="list-group-item"><a href="http://github.com/voidstarsec"><i class="fa fa-github-square fa-lg"></i> github</a></li>
+    <li class="list-group-item"><a href="https://twitter.com/voidstarsec"><i class="fa fa-twitter-square fa-lg"></i> twitter</a></li>
+    <li class="list-group-item"><a href="https://www.linkedin.com/in/voidstarsec"><i class="fa fa-linkedin-square fa-lg"></i> linkedin</a></li>
+    <li class="list-group-item"><a href="https://github.com/voidstarsec"><i class="fa fa-github-square fa-lg"></i> github</a></li>
   </ul>
 </li>
 <!-- End Sidebar/Social -->
