--- a/output/voidstar-security-2023-year-in-review.html
+++ b/output/voidstar-security-2023-year-in-review.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns# fb: https://www.facebook.com/2008/fbml">
 <head>
-    <title>"VoidStar Security - 2023 Year In Review" - VoidStar Security Blog</title>
+    <title>VoidStar Security - 2023 Year In Review - VoidStar Security Blog</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -9,38 +9,38 @@
 
 
 
-<link rel="canonical" href="https://wrongbaud.github.io/newblog/voidstar-security-2023-year-in-review.html">
+<link rel="canonical" href="/voidstar-security-2023-year-in-review.html">
 
-        <meta name="author" content="VoidStar Security" />
+        <meta name="author" content=""Matthew Alt"" />
         <meta name="keywords" content="hardware,blog,tools" />
         <meta name="description" content="As we reach the end of the year, I want to thank everyone for their continued support and business. 2023 was a great year for training and consulting. We worked with companies ranging from 4000 to 15 members, all of which brought unique perspectives to our course material and allowed us to expand on new topics and targets. A big thanks to all those who reached out for onsite training in 2023 and those who contracted with us!" />
 
         <meta property="og:site_name" content="VoidStar Security Blog" />
         <meta property="og:type" content="article"/>
-        <meta property="og:title" content="&#34;VoidStar Security - 2023 Year In Review&#34;"/>
-        <meta property="og:url" content="https://wrongbaud.github.io/newblog/voidstar-security-2023-year-in-review.html"/>
+        <meta property="og:title" content="VoidStar Security - 2023 Year In Review"/>
+        <meta property="og:url" content="/voidstar-security-2023-year-in-review.html"/>
         <meta property="og:description" content="As we reach the end of the year, I want to thank everyone for their continued support and business. 2023 was a great year for training and consulting. We worked with companies ranging from 4000 to 15 members, all of which brought unique perspectives to our course material and allowed us to expand on new topics and targets. A big thanks to all those who reached out for onsite training in 2023 and those who contracted with us!"/>
         <meta property="article:published_time" content="2023-12-29" />
-            <meta property="article:section" content="blog" />
+            <meta property="article:section" content="Training" />
             <meta property="article:tag" content="hardware" />
             <meta property="article:tag" content="blog" />
             <meta property="article:tag" content="tools" />
-            <meta property="article:author" content="VoidStar Security" />
+            <meta property="article:author" content=""Matthew Alt"" />
 
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="https://wrongbaud.github.io/newblog/theme/css/bootstrap.spacelab.min.css" type="text/css"/>
-    <link href="https://wrongbaud.github.io/newblog/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="/theme/css/bootstrap.spacelab.min.css" type="text/css"/>
+    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="https://wrongbaud.github.io/newblog/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://wrongbaud.github.io/newblog/theme/css/style.css" type="text/css"/>
+    <link href="/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
 
-        <link href="https://wrongbaud.github.io/newblog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
+        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
               title="VoidStar Security Blog ATOM Feed"/>
 
-        <link href="https://wrongbaud.github.io/newblog/feeds/blog.atom.xml" type="application/atom+xml" rel="alternate"
-              title="VoidStar Security Blog blog ATOM Feed"/>
+        <link href="/feeds/training.atom.xml" type="application/atom+xml" rel="alternate"
+              title="VoidStar Security Blog Training ATOM Feed"/>
 
 </head>
 <body>
@@ -48,7 +48,7 @@
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
-            <a href="https://wrongbaud.github.io/newblog/" class="navbar-brand">
+            <a href="/" class="navbar-brand">
 VoidStar Security Blog            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -72,10 +72,10 @@ VoidStar Security Blog            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="https://wrongbaud.github.io/newblog/voidstar-security-2023-year-in-review.html"
+                    <a href="/voidstar-security-2023-year-in-review.html"
                        rel="bookmark"
-                       title="Permalink to "VoidStar Security - 2023 Year In Review"">
-                        "VoidStar Security - 2023 Year In Review"
+                       title="Permalink to VoidStar Security - 2023 Year In Review">
+                        VoidStar Security - 2023 Year In Review
                     </a>
                 </h1>
             </header>
@@ -90,18 +90,18 @@ VoidStar Security Blog            </a>
 
 
             <span class="label label-default">By</span>
-            <a href="https://wrongbaud.github.io/newblog/author/voidstar-security.html"><i class="fa fa-user"></i> VoidStar Security</a>
+            <a href="/author/matthew-alt.html"><i class="fa fa-user"></i> "Matthew Alt"</a>
 
         <span class="label label-default">Category</span>
-        <a href="https://wrongbaud.github.io/newblog/category/blog.html">blog</a>
+        <a href="/category/training.html">Training</a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="https://wrongbaud.github.io/newblog/tag/hardware.html">hardware</a>
+	<a href="/tag/hardware.html">hardware</a>
         /
-	<a href="https://wrongbaud.github.io/newblog/tag/blog.html">blog</a>
+	<a href="/tag/blog.html">blog</a>
         /
-	<a href="https://wrongbaud.github.io/newblog/tag/tools.html">tools</a>
+	<a href="/tag/tools.html">tools</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -148,19 +148,16 @@ VoidStar Security Blog            </a>
   <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Categories</span></h4>
   <ul class="list-group" id="categories">
     <li class="list-group-item">
-      <a href="https://wrongbaud.github.io/newblog/category/blog.html"><i class="fa fa-folder-open fa-lg"></i>blog</a>
+      <a href="/category/ghidra.html"><i class="fa fa-folder-open fa-lg"></i>Ghidra</a>
     </li>
     <li class="list-group-item">
-      <a href="https://wrongbaud.github.io/newblog/category/ghidra.html"><i class="fa fa-folder-open fa-lg"></i>Ghidra</a>
+      <a href="/category/glitching.html"><i class="fa fa-folder-open fa-lg"></i>Glitching</a>
     </li>
     <li class="list-group-item">
-      <a href="https://wrongbaud.github.io/newblog/category/glitching.html"><i class="fa fa-folder-open fa-lg"></i>Glitching</a>
+      <a href="/category/hardware.html"><i class="fa fa-folder-open fa-lg"></i>Hardware</a>
     </li>
     <li class="list-group-item">
-      <a href="https://wrongbaud.github.io/newblog/category/pifex.html"><i class="fa fa-folder-open fa-lg"></i>Pifex</a>
-    </li>
-    <li class="list-group-item">
-      <a href="https://wrongbaud.github.io/newblog/category/training.html"><i class="fa fa-folder-open fa-lg"></i>training</a>
+      <a href="/category/training.html"><i class="fa fa-folder-open fa-lg"></i>Training</a>
     </li>
   </ul>
 </li>
@@ -208,13 +205,13 @@ VoidStar Security Blog            </a>
       </div>
    </div>
 </footer>
-<script src="https://wrongbaud.github.io/newblog/theme/js/jquery.min.js"></script>
+<script src="/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="https://wrongbaud.github.io/newblog/theme/js/bootstrap.min.js"></script>
+<script src="/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="https://wrongbaud.github.io/newblog/theme/js/respond.min.js"></script>
+<script src="/theme/js/respond.min.js"></script>
 
 
 
