--- a/output/authors.html
+++ b/output/authors.html
@@ -46,7 +46,6 @@ VoidStar Security Blog            </a>
             <ul class="nav navbar-nav">
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="https://wrongbaud.github.io/newblog/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -60,6 +59,10 @@ VoidStar Security Blog            </a>
 <div class="container">
     <div class="row">
         <div class="col-sm-9 col-sm-push-3">
+        <ol class="breadcrumb">
+            <li><a href="https://wrongbaud.github.io/newblog" title="VoidStar Security Blog"><i class="fa fa-home fa-lg"></i></a></li>
+            <li class="active">Authors</li>
+        </ol>
   <h1>Authors on VoidStar Security Blog</h1>
         <li><a href="https://wrongbaud.github.io/newblog/author/matthew-alt.html">"Matthew Alt"</a> (6)</li>
         <li><a href="https://wrongbaud.github.io/newblog/author/voidstar-security.html">VoidStar Security</a> (2)</li>
@@ -69,6 +72,18 @@ VoidStar Security Blog            </a>
 <!-- Sidebar -->
 <section class="well well-sm">
   <ul class="list-group list-group-flush">
+
+<!-- Sidebar/Social -->
+<li class="list-group-item">
+  <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
+  <ul class="list-group" id="social">
+    <li class="list-group-item"><a href="https://voidstarsec.com"><i class="fa fa-vss-website-square fa-lg"></i> VSS website</a></li>
+    <li class="list-group-item"><a href="https://twitter.com/voidstarsec"><i class="fa fa-twitter-square fa-lg"></i> twitter</a></li>
+    <li class="list-group-item"><a href="https://www.linkedin.com/in/voidstarsec"><i class="fa fa-linkedin-square fa-lg"></i> linkedin</a></li>
+    <li class="list-group-item"><a href="https://github.com/voidstarsec"><i class="fa fa-github-square fa-lg"></i> github</a></li>
+  </ul>
+</li>
+<!-- End Sidebar/Social -->
 
 <!-- Sidebar/Categories -->
 <li class="list-group-item">
@@ -84,22 +99,14 @@ VoidStar Security Blog            </a>
       <a href="https://wrongbaud.github.io/newblog/category/hardware.html"><i class="fa fa-folder-open fa-lg"></i>Hardware</a>
     </li>
     <li class="list-group-item">
+      <a href="https://wrongbaud.github.io/newblog/category/pifex.html"><i class="fa fa-folder-open fa-lg"></i>Pifex</a>
+    </li>
+    <li class="list-group-item">
       <a href="https://wrongbaud.github.io/newblog/category/training.html"><i class="fa fa-folder-open fa-lg"></i>Training</a>
     </li>
   </ul>
 </li>
 <!-- End Sidebar/Categories -->
-
-<!-- Sidebar/Social -->
-<li class="list-group-item">
-  <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
-  <ul class="list-group" id="social">
-    <li class="list-group-item"><a href="https://twitter.com/voidstarsec"><i class="fa fa-twitter-square fa-lg"></i> twitter</a></li>
-    <li class="list-group-item"><a href="https://www.linkedin.com/in/voidstarsec"><i class="fa fa-linkedin-square fa-lg"></i> linkedin</a></li>
-    <li class="list-group-item"><a href="https://github.com/voidstarsec"><i class="fa fa-github-square fa-lg"></i> github</a></li>
-  </ul>
-</li>
-<!-- End Sidebar/Social -->
 
 <!-- Sidebar/Links -->
 <li class="list-group-item">
