--- a/output/jtag-pifex.html
+++ b/output/jtag-pifex.html
@@ -21,7 +21,7 @@
         <meta property="og:url" content="https://wrongbaud.github.io/newblog/jtag-pifex.html"/>
         <meta property="og:description" content="With this blog post, we&#39;ll introduce the PiFex, a basic companion board for the Raspberry Pi designed to teach users the basics of hardware hacking and embedded protocols. We will then demonstrate how to use the PiFex to access a JTAG tap on an undocumented SSD, allowing memory reads and GDB access to the SSD CPU."/>
         <meta property="article:published_time" content="2024-05-05" />
-            <meta property="article:section" content="Hardware" />
+            <meta property="article:section" content="Pifex" />
             <meta property="article:tag" content="pifex" />
             <meta property="article:tag" content="jtag" />
             <meta property="article:tag" content="hardware" />
@@ -40,8 +40,8 @@
         <link href="https://wrongbaud.github.io/newblog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
               title="VoidStar Security Blog ATOM Feed"/>
 
-        <link href="https://wrongbaud.github.io/newblog/feeds/hardware.atom.xml" type="application/atom+xml" rel="alternate"
-              title="VoidStar Security Blog Hardware ATOM Feed"/>
+        <link href="https://wrongbaud.github.io/newblog/feeds/pifex.atom.xml" type="application/atom+xml" rel="alternate"
+              title="VoidStar Security Blog Pifex ATOM Feed"/>
 
 </head>
 <body>
@@ -56,7 +56,6 @@ VoidStar Security Blog            </a>
             <ul class="nav navbar-nav">
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="https://wrongbaud.github.io/newblog/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -70,6 +69,10 @@ VoidStar Security Blog            </a>
 <div class="container">
     <div class="row">
         <div class="col-sm-9 col-sm-push-3">
+            <ol class="breadcrumb">
+                <li><a href="https://wrongbaud.github.io/newblog" title="VoidStar Security Blog"><i class="fa fa-home fa-lg"></i></a></li>
+                <li class="active">JTAG Hacking with a Raspberry Pi - Introducing the PiFex</li>
+            </ol>
     <section id="content">
         <article>
             <header class="page-header">
@@ -95,7 +98,7 @@ VoidStar Security Blog            </a>
             <a href="https://wrongbaud.github.io/newblog/author/matthew-alt.html"><i class="fa fa-user"></i> "Matthew Alt"</a>
 
         <span class="label label-default">Category</span>
-        <a href="https://wrongbaud.github.io/newblog/category/hardware.html">Hardware</a>
+        <a href="https://wrongbaud.github.io/newblog/category/pifex.html">Pifex</a>
 
 
 <span class="label label-default">Tags</span>
@@ -109,11 +112,7 @@ VoidStar Security Blog            </a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
-                <div style="width:290px">property</div>
-<p>| description                           |
-| --------------------------------------- | ------------------------------------- |
-| <code>border-bottom-right-radius</code>            | Defines the shape of the bottom-right |</p>
-<h1>Overview</h1>
+                <h1>Overview</h1>
 <p>When performing initial hardware analysis and recon, I have become very fond of using Armbian-based single-board computers (SBCs) for things like UART, SPI, I2C, JTAG, and SWD. One of the main benefits of using one of these boards is that since the peripherals we are interested in are exposed as character devices in Linux, a wide variety of tools are available for interfacing with them, including most programming and scripting languages. </p>
 <p>However, one of the biggest hurdles that stop people from using an Armbian-based device is the initial setup and configuration (not to mention availability!). It takes more time to configure an Orange Pi or Raspberry Pi and enable the various interfaces than plug in an FTDI to your Linux machine. This blog post will help break down some of those barriers and streamline the setup process for those looking to learn hardware hacking with a Linux SBC.</p>
 <p>With this blog post, we'll introduce the PiFex, a basic companion board for the Raspberry Pi designed to teach users the basics of hardware hacking and embedded protocols. We will then demonstrate how to use the PiFex to access a JTAG tap on an undocumented SSD, allowing memory reads and GDB access to the SSD CPU.</p>
@@ -174,7 +173,7 @@ VoidStar Security Blog            </a>
 <p>So, we've talked about our new hardware tooling. How about a demonstration of it in action? Let's start with a low-cost SSD purchased on AliExpress. </p>
 <p><img alt="" src="https://voidstarsec.com/blog/assets/images/jtag-pifex/top_pcb_labelled.jpg"></p>
 <p>If we break down the hardware, we have the following:</p>
-<table>
+<table class="table table-striped">
 <thead>
 <tr>
 <th>Component</th>
@@ -216,7 +215,7 @@ VoidStar Security Blog            </a>
 <li><strong>Side Note:</strong> When reversing a new target, I like to place the target platform on top of a blank sheet of paper; that way, I can quickly write down notes as I am probing/reverse engineering without having to turn away from the workspace. You can see this in the video below:</li>
 </ul>
 <p><img alt="UART Startup Voltages" src="https://voidstarsec.com/blog/assets/images/jtag-pifex/measurement.gif" style="display:block; margin-left:auto; margin-right:auto"></p>
-<table>
+<table class="table table-striped table-hover">
 <thead>
 <tr>
 <th>Pin</th>
@@ -282,7 +281,7 @@ VoidStar Security Blog            </a>
 <p><img alt="" src="https://voidstarsec.com/blog/assets/images/jtag-pifex/digital_drops.png"></p>
 <p>Looking closely at the images above, you may notice that image 1 has a slightly different shape when it rises and falls than the other lines. This is likely due to a capacitor being present somewhere on this line, which makes it a good candidate for VCC. This was pin two on the debug header, so we can now update our table as shown below.</p>
 <p><img alt="" src="https://voidstarsec.com/blog/assets/images/jtag-pifex/analog_drops.png"></p>
-<table>
+<table class="table table-striped table-hover">
 <thead>
 <tr>
 <th>Pin</th>
@@ -400,7 +399,7 @@ FOUND!<span class="w"> </span>TCK:pin10<span class="w"> </span>TMS:pin14<span cl
 </code></pre></div>
 
 <p>Going back to our table of pin usages, we now know the following:</p>
-<table>
+<table class="table table-striped table-hover">
 <thead>
 <tr>
 <th>Pin</th>
@@ -740,6 +739,18 @@ make
 <section class="well well-sm">
   <ul class="list-group list-group-flush">
 
+<!-- Sidebar/Social -->
+<li class="list-group-item">
+  <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
+  <ul class="list-group" id="social">
+    <li class="list-group-item"><a href="https://voidstarsec.com"><i class="fa fa-vss-website-square fa-lg"></i> VSS website</a></li>
+    <li class="list-group-item"><a href="https://twitter.com/voidstarsec"><i class="fa fa-twitter-square fa-lg"></i> twitter</a></li>
+    <li class="list-group-item"><a href="https://www.linkedin.com/in/voidstarsec"><i class="fa fa-linkedin-square fa-lg"></i> linkedin</a></li>
+    <li class="list-group-item"><a href="https://github.com/voidstarsec"><i class="fa fa-github-square fa-lg"></i> github</a></li>
+  </ul>
+</li>
+<!-- End Sidebar/Social -->
+
 <!-- Sidebar/Categories -->
 <li class="list-group-item">
   <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Categories</span></h4>
@@ -754,22 +765,14 @@ make
       <a href="https://wrongbaud.github.io/newblog/category/hardware.html"><i class="fa fa-folder-open fa-lg"></i>Hardware</a>
     </li>
     <li class="list-group-item">
+      <a href="https://wrongbaud.github.io/newblog/category/pifex.html"><i class="fa fa-folder-open fa-lg"></i>Pifex</a>
+    </li>
+    <li class="list-group-item">
       <a href="https://wrongbaud.github.io/newblog/category/training.html"><i class="fa fa-folder-open fa-lg"></i>Training</a>
     </li>
   </ul>
 </li>
 <!-- End Sidebar/Categories -->
-
-<!-- Sidebar/Social -->
-<li class="list-group-item">
-  <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
-  <ul class="list-group" id="social">
-    <li class="list-group-item"><a href="https://twitter.com/voidstarsec"><i class="fa fa-twitter-square fa-lg"></i> twitter</a></li>
-    <li class="list-group-item"><a href="https://www.linkedin.com/in/voidstarsec"><i class="fa fa-linkedin-square fa-lg"></i> linkedin</a></li>
-    <li class="list-group-item"><a href="https://github.com/voidstarsec"><i class="fa fa-github-square fa-lg"></i> github</a></li>
-  </ul>
-</li>
-<!-- End Sidebar/Social -->
 
 <!-- Sidebar/Links -->
 <li class="list-group-item">
