--- a/output/uart-uboot-and-usb.html
+++ b/output/uart-uboot-and-usb.html
@@ -55,7 +55,6 @@ VoidStar Security Blog            </a>
             <ul class="nav navbar-nav">
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="https://wrongbaud.github.io/newblog/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -69,6 +68,10 @@ VoidStar Security Blog            </a>
 <div class="container">
     <div class="row">
         <div class="col-sm-9 col-sm-push-3">
+            <ol class="breadcrumb">
+                <li><a href="https://wrongbaud.github.io/newblog" title="VoidStar Security Blog"><i class="fa fa-home fa-lg"></i></a></li>
+                <li class="active">Intro to Embedded RE: UART Discovery and Firmware Extraction via UBoot</li>
+            </ol>
     <section id="content">
         <article>
             <header class="page-header">
@@ -225,7 +228,7 @@ outlined in blue in the image below:</p>
 <hr>
 <h2>Examining Debug Headers</h2>
 <p>When looking at unknown headers like those pointed out in the section above, I usually start by measuring the voltage. We can do this using <a href="https://www.youtube.com/watch?v=TdUK6RPdIrA">our multimeters</a>. To calculate the voltage on these pads, we will set the multimeter to DC measurement mode and probe the locations of interest while holding our black probe on a ground point. The pins measure as follows:</p>
-<table>
+<table class="table table-striped table-hover">
 <thead>
 <tr>
 <th align="center">Pin</th>
@@ -253,7 +256,7 @@ outlined in blue in the image below:</p>
 </table>
 <p>There is no voltage on these lines; while this is disappointing, it is not unexpected. If this were an active UART or another digital signal being transmitted, we would have expected to see some activity in the form of voltage fluctuations. Let's move on to the other three-pin header.</p>
 <p><img alt="UART Connector" src="https://voidstarsec.com/blog/assets/images/uart-colors.png" style="display:block; margin-left:auto; margin-right:auto"></p>
-<table>
+<table class="table table-striped table-hover">
 <thead>
 <tr>
 <th align="center">Pin</th>
@@ -292,7 +295,7 @@ outlined in blue in the image below:</p>
 <h1>UART</h1>
 <p>UART stands for Universal Asynchronous Receiver Transmitter. UART is a two-wire asynchronous serial protocol that allows two devices to communicate. The two lines required for each party are the Transmit (Tx) and receive (Rx) lines. A UART can be used for many things on an embedded system, including communicating with other processors, sensor communications, and debug access. UART is an asynchronous protocol meaning that there is no clock signal required. Instead, both communicating parties are preconfigured to communicate at a certain speed, referred to as the baud rate. The baud rate is measured in bits per second.</p>
 <p>A UART packet/transmission consists of the following fields:</p>
-<table>
+<table class="table table-striped table-hover">
 <thead>
 <tr>
 <th align="center">Bit Position</th>
@@ -1079,6 +1082,18 @@ Hit key to stop autoboot(&#39;CTRL+C&#39;):  0
 <section class="well well-sm">
   <ul class="list-group list-group-flush">
 
+<!-- Sidebar/Social -->
+<li class="list-group-item">
+  <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
+  <ul class="list-group" id="social">
+    <li class="list-group-item"><a href="https://voidstarsec.com"><i class="fa fa-vss-website-square fa-lg"></i> VSS website</a></li>
+    <li class="list-group-item"><a href="https://twitter.com/voidstarsec"><i class="fa fa-twitter-square fa-lg"></i> twitter</a></li>
+    <li class="list-group-item"><a href="https://www.linkedin.com/in/voidstarsec"><i class="fa fa-linkedin-square fa-lg"></i> linkedin</a></li>
+    <li class="list-group-item"><a href="https://github.com/voidstarsec"><i class="fa fa-github-square fa-lg"></i> github</a></li>
+  </ul>
+</li>
+<!-- End Sidebar/Social -->
+
 <!-- Sidebar/Categories -->
 <li class="list-group-item">
   <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Categories</span></h4>
@@ -1093,22 +1108,14 @@ Hit key to stop autoboot(&#39;CTRL+C&#39;):  0
       <a href="https://wrongbaud.github.io/newblog/category/hardware.html"><i class="fa fa-folder-open fa-lg"></i>Hardware</a>
     </li>
     <li class="list-group-item">
+      <a href="https://wrongbaud.github.io/newblog/category/pifex.html"><i class="fa fa-folder-open fa-lg"></i>Pifex</a>
+    </li>
+    <li class="list-group-item">
       <a href="https://wrongbaud.github.io/newblog/category/training.html"><i class="fa fa-folder-open fa-lg"></i>Training</a>
     </li>
   </ul>
 </li>
 <!-- End Sidebar/Categories -->
-
-<!-- Sidebar/Social -->
-<li class="list-group-item">
-  <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
-  <ul class="list-group" id="social">
-    <li class="list-group-item"><a href="https://twitter.com/voidstarsec"><i class="fa fa-twitter-square fa-lg"></i> twitter</a></li>
-    <li class="list-group-item"><a href="https://www.linkedin.com/in/voidstarsec"><i class="fa fa-linkedin-square fa-lg"></i> linkedin</a></li>
-    <li class="list-group-item"><a href="https://github.com/voidstarsec"><i class="fa fa-github-square fa-lg"></i> github</a></li>
-  </ul>
-</li>
-<!-- End Sidebar/Social -->
 
 <!-- Sidebar/Links -->
 <li class="list-group-item">
